@@ -1,3 +1,15 @@
+2006-02-24  Antti Koivisto  <koivisto@iki.fi>
+
+        Reviewed by Hyatt.
+
+        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7440
+        Floats not positioned correctly
+
+        Test: fast/block/float/multiple-float-positioning.html
+
+        * rendering/RenderBlock.cpp: 
+        (WebCore::RenderBlock::positionNewFloats): Correct iteration of the float list
+
 2006-02-24  Graham Dennis  <Graham.Dennis@gmail.com>
 
         <http://bugzilla.opendarwin.org/show_bug.cgi?id=6933>
